# agent-os

./: .dockerignore  .env.example  .gitignore  .releaserc  AGENTS.md  AGENT_OS_REVIEW.md  CONTINUATION_PROMPT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.nanobot  MASTER_PLAN.md  MIGRATION.md  PROJECT_STATE.md  README.md  SPEC.md  STATE_OF_AGENT_OS.md  docker-compose.yml  docker-compose.yml.bak  go.mod  nx.json  package-lock.json  package.json  pyproject.toml  turbo.json
.github/workflows/: agent-os.yml  build-and-deploy.yml  ci.yml  deploy.yml  release.yml  ssh-deploy.yml  test-build.yml
.nx/workspace-data/: nx_files.nxt
apps/dashboard/agent-core/: hatch.toml  pyproject.toml
apps/dashboard/agent-core/src/: nanobot_proxy.py
apps/dashboard/agent-core/src/agent_core/: service.py
apps/dashboard/backend/: package-lock.json  package.json  tsconfig.json
apps/dashboard/backend/src/: index.ts
apps/dashboard/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/dashboard/frontend/src/: App.tsx  index.css  main.tsx  package.json  tsconfig.json
apps/dashboard/frontend/src/components/: ChatPanel.tsx  ChatSidebar.tsx  ModelInfoCard.tsx  ModelPickerDialog.tsx  OAuthLoginModal.tsx  ObservabilityPanel.tsx  Sidebar.tsx  SidebarStatusStrip.tsx  StatusBar.tsx  ThemeSwitcher.tsx  Toast.tsx  ToolCallRenderer.tsx
apps/dashboard/frontend/src/context/: ThemeContext.tsx
apps/dashboard/frontend/src/contexts/: usePageHeader.tsx  useSystemActions.ts
apps/dashboard/frontend/src/hooks/: useConfirmDelete.tsx  useSidebarStatus.ts  useToast.ts
apps/dashboard/frontend/src/i18n/: context.tsx  index.ts
apps/dashboard/frontend/src/lib/: api.ts  dashboard-flags.ts  gatewayClient.ts  nested.ts  socket.ts  utils.ts
apps/dashboard/frontend/src/pages/: AnalyticsPage.tsx  AppStorePage.tsx  ChatPage.tsx  ConfigPage.tsx  ContainerPage.tsx  CronPage.tsx  EnvPage.tsx  (+13 more)
infra/: nginx.conf
infra/CasaOS/agent/: agent_test.go  go.mod  main.go  main_test.go
infra/CasaOS/webhook-emitter/: go.mod  main.go
infra/postgres/: run_migrations.sh
infra/postgres/migrations/: 001_initial.sql  002_observability_tables.sql  003_dashboard_sessions.sql  004_pg_cron_jobs.sql  005_skill_settings.sql  006_profiles_soul.sql  007_optimize_queries.sql  008_fix_indexes.sql
infra/postgres/scripts/: 02-connection-pooling.sql
infra/terraform/: .gitignore  README.md  main.tf  variables.auto.tfvars.example
scripts/: agent-deploy.sh  entrypoint.sh  start-agent.sh  watchdog.py
(+5 files in other folders)
