[project]
name = "agent-os"
version = "0.0.0"
description = "Monorepo root — not installed directly"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai",
    "agent-os-observability",
    "agent-os-agent-adapter",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "mypy>=0.1.0",
]

[tool.uv.spaces]
independent = true

[tool.uv.sources]
nanobot-ai = { workspace = true }
agent-os-observability = { workspace = true }
agent-os-agent-adapter = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/nanobot",
    "packages/observability",
    "packages/agent-adapter",
]
