[project]
name = "agent-os"
version = "0.0.0"
description = "Monorepo root — not installed directly. See individual packages."
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai",
    "agent-os-observability",
    "agent-os-agent-adapter",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    "packages/nanobot/tests",
    "packages/nanobot/nanobot/skills",
    "packages/nanobot/nanobot/channels",
    "packages/nanobot/nanobot/cli",
    "packages/nanobot/nanobot/command",
    "packages/nanobot/nanobot/providers",
    "packages/nanobot/nanobot/agent/skills.py",
    "packages/nanobot/nanobot/cron/service.py",
]
disable_error_code = [
    "override",
    "arg-type",
    "union-attr",
    "assignment",
    "annotation-unchecked",
    "misc",
    "no-redef",
    "func-returns-value",
    "return-value",
    "index",
    "operator",
    "truthy-function",
    "valid-type",
    "attr-defined",
    "misc",
    "method-assign",
    "abstract",
    "var-annotated",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "mypy>=0.1.0",
]

[tool.uv.sources]
nanobot-ai = { workspace = true }
agent-os-observability = { workspace = true }
agent-os-agent-adapter = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/nanobot",
    "packages/observability",
    "packages/agent-adapter",
]
